# ai_chat_bot

./: .gitignore  AI_RULES.md  Cargo.toml  README.md
src/: app.rs  db_discovery.rs  executor.rs  main.rs  mcp_client.rs  models.rs  parser.rs  rag_engine.rs  screen_awareness.rs  setup.rs  storage.rs  swarm.rs  telemetry.rs  watcher.rs  web_engine.rs
src/api/: mod.rs  openai.rs
src/config/: settings.rs
src/db/: database.rs
src/files/: reader.rs
src/shell/: executor.rs
