[package]
name = "ai_chat_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default_fonts", "persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image", "file"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
dirs = "5"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
open = "5"
egui_commonmark = "0.20"
regex = "1"
sysinfo = "0.37"
nvml-wrapper = "0.11"
ignore = "0.4"
qdrant-client = "1"
async-trait = "0.1"
directories = "5"
arboard = "3"
